# dnsrd

./: .gitignore  CMakeLists.txt  DNSPacket.c  DNSPacket.h  DNSQuery.c  DNSQuery.h  RBTree.c  RBTree.h  RBTree_int.c  RBTree_int.h  cache.txt  cli.c  cli.h  config.h  handler.c  handler.h  hosts.txt  idTransfer.c  idTransfer.h  lhm.c  lhm.h  loadCache.c  loadCache.h  loadConfig.c  loadConfig.h  main.c
