project( DNSRD )
cmake_minimum_required( VERSION 2.8.12 )
file(GLOB_RECURSE SRCS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} DNSPacket.c DNSPacket.h DNSQuery.c DNSQuery.h idTransfer.c idTransfer.h loadConfig.c loadConfig.h RBTree.c RBTree.h)
add_executable( ${PROJECT_NAME} main.c ${SRCS} )
target_link_libraries(${PROJECT_NAME} ws2_32)